--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>PIMS PDI</name>
 
 	<groupId>com.eleonorvinicius.pims</groupId>
 	<artifactId>pdi</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
 	<build>
 		<plugins>
@@ -41,6 +42,17 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.6.2</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.rabbitmq</groupId>
 			<artifactId>amqp-client</artifactId>
@@ -78,11 +90,10 @@
 			<version>${postgresql-version}</version>
 		</dependency>
 	</dependencies>
-
 	<repositories>
 		<repository>
-			<id>pentaho-releases</id>
-			<url>http://repository.pentaho.org/artifactory/repo/</url>
+			<id>repository-pentaho</id>
+			<url>http://repository.pentaho.org/artifactory/repo</url>
 		</repository>
 	</repositories>
 </project>
