--- a/pom.xml
+++ b/pom.xml
@@ -39,18 +39,19 @@
 		<kettle-version>6.1.0.4-227</kettle-version>
 		<postgresql-version>9.4.1209</postgresql-version>
 		<rabbitmq-version>3.6.5</rabbitmq-version>
+		<log4j-version>2.6.2</log4j-version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
-			<version>2.6.2</version>
+			<version>${log4j-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.6.2</version>
+			<version>${log4j-version}</version>
 		</dependency>
 
 		<dependency>
