--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
+			    <version>2.1</version>
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>com.eleonorvinicius.pims.pdi.PDIJobExecutionListener</mainClass>
+							<mainClass>com.eleonorvinicius.pims.pdi.PDIListener</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
@@ -36,10 +37,10 @@
 	</build>
 
 	<properties>
-		<kettle-version>7.0.0.6-91</kettle-version>
-		<postgresql-version>9.4.1209</postgresql-version>
-		<rabbitmq-version>3.6.5</rabbitmq-version>
-		<log4j-version>2.6.2</log4j-version>
+		<kettle-version>7.0.0.6-95</kettle-version>
+		<postgresql-version>9.4.1212</postgresql-version>
+		<rabbitmq-version>4.1.0</rabbitmq-version>
+		<log4j-version>2.8.2</log4j-version>
 	</properties>
 
 	<dependencies>
